--- a/tracker/templates/tracker/create_habit.html
+++ b/tracker/templates/tracker/create_habit.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <div class="container mt-4">
+    <div class="body">
         <h2>Create New Post</h2>
         <form method="post">
             {% csrf_token %}
