--- a/tracker/templates/tracker/habit_detail.html
+++ b/tracker/templates/tracker/habit_detail.html
@@ -41,9 +41,9 @@
         <h3 class="mb-2">History</h3>
         <ul class="list-group">
             {% for log in logs %}
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                    {{ log.date }}:
-                    <span>{{ log.note }}</span>
+                <li class="list-group-item d-flex justify-content-between">
+                    <strong>{{ log.user }}</strong>
+                    {{ log.date }}: {{ log.note }}
                 </li>
             {% empty %}
                 <li class="list-group-item text-muted">No entries yet.</li>
