--- a/tracker/templates/tracker/habit_detail.html
+++ b/tracker/templates/tracker/habit_detail.html
@@ -39,11 +39,28 @@
         </div>
 
         <h3 class="mb-2">History</h3>
+
+        <form method="get" class="mb-3">
+            <label for="user">View logs from:</label>
+            <select name="user" id="user" onchange="this.form.submit()" class="form-select w-auto d-inline-block ms-2">
+                <option value="{{ request.user.id }}" {% if selected_user.id =request.user.id %}selected{% endif %}>
+                    You ({{ request.user.username }})
+                </option>
+                {% for user in shared_users %}
+                    <option value="{{ user.id }}" {% if selected_user.id=user.id %}selected{% endif %}>
+                        {{ user.username }}
+                    </option>
+                {% endfor %}
+            </select>
+        </form>
+
         <ul class="list-group">
             {% for log in logs %}
                 <li class="list-group-item d-flex justify-content-between">
-                    <strong>{{ log.user }}</strong>
-                    {{ log.date }}: {{ log.note }}
+                    <span>
+                        <strong>{{ log.date }}</strong>: {{ log.note }}
+                    </span>
+                    <span class="text-muted">{{ log.user.username }}</span>
                 </li>
             {% empty %}
                 <li class="list-group-item text-muted">No entries yet.</li>
