--- a/tracker/templates/tracker/create_habit.html
+++ b/tracker/templates/tracker/create_habit.html
@@ -6,7 +6,23 @@
         <h2>Create New Post</h2>
         <form method="post">
             {% csrf_token %}
-            {{ form.as_p }}
+
+            <div class="mb-3">
+                {{ form.name.label_tag }}
+                <br>
+                {{ form.name }}
+            </div>
+            <div class="mb-3">
+                {{ form.category.label_tag }}
+                <br>
+                {{ form.category }}
+            </div>
+            <div class="mb-3">
+                <strong>Share with friends: </strong>
+                <br>
+                {{ form.users }}
+            </div>
+            
             <button type="submit" class="btn btn-success">Create habit</button>
         </form>
     </div>
