--- a/tracker/templates/tracker/layout.html
+++ b/tracker/templates/tracker/layout.html
@@ -26,7 +26,7 @@
                 </li>
                 {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'search_users' %}">Add Friends</a>
+                        <a class="nav-link" href="{% url 'friends_list' %}">My Friends</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
