--- a/tracker/templates/tracker/create_habit.html
+++ b/tracker/templates/tracker/create_habit.html
@@ -1,29 +1,38 @@
 {% extends "tracker/layout.html" %}
 
+{% load static %}
+
 {% block body %}
 
-    <div class="body">
-        <h2>Create New Post</h2>
+    <div class="container mt-4">
+        <h2 class="text-center mb-4">Create New Post</h2>
         <form method="post">
             {% csrf_token %}
 
-            <div class="mb-3">
-                {{ form.name.label_tag }}
-                <br>
-                {{ form.name }}
+            <div class="mb-4">
+                <label for="{{ form.name.id_for_label }}" class="form-label">{{ form.name.label }}</label>
+                <input type="text" name="name" id="{{ form.name.id_for_label }}" class="form-control" value="{{ form.name.value }}">
             </div>
-            <div class="mb-3">
-                {{ form.category.label_tag }}
-                <br>
-                {{ form.category }}
+            <div class="mb-4">
+                <label for="{{ form.category.id_for_label }}" class="form-label">{{ form.category.label }}</label>
+                <select name="category" id="{{ form.category.id_for_label }}" class="form-control">
+                    {% for choice in form.category.field.choices %}
+                        <option value="{{ choice.0 }}" {% if choice.0 == form.category.value %}selected{% endif %}>{{ choice.1 }}</option>
+                    {% endfor %}
+                </select>
             </div>
-            <div class="mb-3">
-                <strong>Share with friends: </strong>
-                <br>
-                {{ form.users }}
+            <div class="mb-4">
+                <label for="{{ form.users.id_for_label }}" class="form-label"><strong>Share with friends:</strong></label>
+                <select name="users" id="{{ form.users.id_for_label }}" class="form-control" multiple>
+                    {% for user in form.users.field.queryset %}
+                        <option value="{{ user.id }}" {% if user.id in form.users.value %}selected{% endif %}>{{ user.username }}</option>
+                    {% endfor %}
+                </select>
             </div>
-            
-            <button type="submit" class="btn btn-success">Create habit</button>
+
+            <div class="d-flex justify-content-center">
+                <button type="submit" class="btn btn-success">Create Habit</button>
+            </div>
         </form>
     </div>
 {% endblock %}
