--- a/tracker/templates/tracker/habit_detail.html
+++ b/tracker/templates/tracker/habit_detail.html
@@ -20,13 +20,20 @@
         </p>
 
         <hr>
-
+        
         <form method="post" class="mb-4" id="note_today_input">
-            {% csrf_token%}
-            {{ form.as_p }}
-            <button type="submit" class="btn btn-primary">Save today's entry</button>
-        </form>
+            {% csrf_token %}
+            <div class="mb-3">
+                <label for="{{ form.minutes_done.id_for_label }}">Minutes Done</label>
+                {{ form.minutes_done}}
+            </div>
 
+            <div class="mb-3">
+                <label for="{{ form.note.id_for_label}}">Note: </label>
+                {{ form.note }}
+            </div>    
+            <button type="submit" class="btn btn-primary">Save progress</button>
+        </form>
         <div class="mb-4">
             <div class="alert alert-info">
                 <strong>Current Streak: </strong>{{ streak.current_streak }} days
