shared habits page

--- a/tracker/templates/tracker/create_habit.html
+++ b/tracker/templates/tracker/create_habit.html
@@ -5,7 +5,7 @@
 {% block body %}
 
     <div class="container mt-4">
-        <h2 class="text-center mb-4">Create New Post</h2>
+        <h2 class="text-center mb-4">Create New Habit</h2>
         <form method="post">
             {% csrf_token %}
 
