--- a/tracker/templates/tracker/layout.html
+++ b/tracker/templates/tracker/layout.html
@@ -31,6 +31,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'shared_habits' %}">Shared Habits</a>
+                    </li>
                 {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'login' %}">Log In</a>
