--- a/tracker/templates/tracker/shared_habits.html
+++ b/tracker/templates/tracker/shared_habits.html
@@ -8,9 +8,23 @@
         {% if habits %}
             <ul class="list-group">
                 {% for habit in habits %}
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
-                        <a href="{% url 'habit_detail' habit.id %}">{{ habit.name }}</a>
-                        <span class="badge bg-info">Shared</span>
+                    <li class="list-group-item">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <a href="{% url 'habit_detail' habit.id %}">{{ habit.name }}</a>
+                            {% if habit.owner == request.user %}
+                                <span class="badge bg-info">Shared</span>
+                            {% else %}
+                                <span class="badge bg-warning">Owner</span>
+                            {% endif %}
+                        </div>
+                        <small class="text-muted">
+                            Shared with:
+                            {% for user in habit.users.all %}
+                                {% if user != request.user %}
+                                    {{ user.username }}{% if not forloop.last %}, {% endif %}
+                                {% endif %}
+                            {% endfor %}
+                        </small>
                     </li>
                 {% endfor %}
             </ul>
