--- a/tracker/templates/tracker/profile.html
+++ b/tracker/templates/tracker/profile.html
@@ -14,7 +14,7 @@
                     <button type="submit" name="send_friend_request" class="btn btn-primary">Send Friend Request</button>
         
                 </form>
-            {% elif already_requsted %}
+            {% elif already_requested %}
                 <div class="alert alert-info">Friend request sent</div>
             {% elif already_friends %}
                 <div class="alert alert-success">You are already friends</div>
