--- a/tracker/templates/tracker/friends_list.html
+++ b/tracker/templates/tracker/friends_list.html
@@ -57,6 +57,28 @@
                 You have no incoming friend requests
             </div>
         {% endif %}
-    </div>
+
+        <h3 class="mt-4 mb-4">Outgoing Requests</h3>
+        {% if outgoing_requests %}
+            <div class="card shadow-sm">
+                <div class="card-body">
+                    <ul class="list-group">
+                        {% for req in outgoing_requests %}
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                {{ req.to_user.username }}
+                                <a href="{% url 'profile_view' req.to_user.username %}">
+                                    <button class="btn btn-outline-secondary btn-sm">View Profile</button>
+                                </a>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+        {% else %}
+            <div class="alert alert-info">
+                You have not sent any friend requests.
+            </div>
+        {% endif %}
     
+    </div>    
 {% endblock %}
