owner and name debug

--- a/tracker/templates/tracker/habit_detail.html
+++ b/tracker/templates/tracker/habit_detail.html
@@ -42,7 +42,7 @@
                     <label for="{{ form.note.id_for_label}}">Note: </label>
                     {{ form.note }}
                 </div>    
-                <button type="submit" class="btn btn-primary">Save progress</button>
+                <button type="submit" id="log-button" class="btn btn-primary">Save progress</button>
             </form>
         
         {% endif %}
