--- a/tracker/templates/tracker/create_habit.html
+++ b/tracker/templates/tracker/create_habit.html
@@ -11,7 +11,7 @@
 
             <div class="mb-4">
                 <label for="{{ form.name.id_for_label }}" class="form-label">{{ form.name.label }}</label>
-                <input type="text" name="name" id="{{ form.name.id_for_label }}" class="form-control" value="{{ form.name.value }}">
+                <input type="text" name="name" id="{{ form.name.id_for_label }}" class="form-control" value="{{ form.name.value|default_if_none:'' }}">
             </div>
             <div class="mb-4">
                 <label for="{{ form.category.id_for_label }}" class="form-label">{{ form.category.label }}</label>
@@ -24,7 +24,7 @@
 
             <div class="mb-4">
                 <label for="{{ form.target_minutes.id_for_label }}" class="form-label">
-                    {{ form.target_minutes.label }} (minutes)
+                    {{ form.target_minutes.label }} (only in minutes)
                 </label>
                 {{ form.target_minutes }}
             </div>
